--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   --color-2: #ffff;
 }
 
+html{
+	
+}
+
 /*Elimina bordes*/
 *{
   box-sizing: border-box;
@@ -14,8 +18,15 @@
 
 /*ANIMACIONES*/
 .fadeInUp{
-	animation: fadeInUp 1s forwards;
+	animation: fadeInUp 1.9s forwards;
     -webkit-animation-name: fadeInUp;
+	-webkit-animation-duration: 1.9s;
+	-webkit-animation-fill-mode: forwards;
+}
+
+.fadeInUp1{
+	animation: fadeInUp1 1s forwards;
+    -webkit-animation-name: fadeInUp1;
 	-webkit-animation-duration: 1s;
 	-webkit-animation-fill-mode: forwards;
 }
@@ -34,7 +45,7 @@
 	}
 }
 
-@keyframes fadeInUp{
+@keyframes fadeInUp1{
 	0%{
 		opacity: 0;
 		-webkit-transform: translateY(100%);
@@ -48,10 +59,26 @@
 	}
 }
 
+#loader-wrapper{
+	background-color: #FFFFFF;
+	overflow: hidden;
+	display: flex;
+	position: fixed;
+	justify-content: center;
+	align-items: center;
+	z-index: 99999999999;
+	height: 100vh;
+	width: 100vw;
+	top: 0;
+}
+
+#loader-wrapper img{
+	width: 60px;
+}
+
 
 .elipse{
-   animation: animate__fadeInUp; 
-   animation-duration: 1.5s!important;
+   opacity: 0;
    position: absolute;
    width: 290px;
    bottom: -544px;
