--- a/style.css
+++ b/style.css
@@ -461,6 +461,7 @@ nav a{
 	margin-top: 115px;
 }
 
+/*****************************************FORMULARIO******************************************************/
 
 .contenedor h1{
 	font-size: 26px;
@@ -469,6 +470,63 @@ nav a{
 	font-family: var(--font);
 	margin-top: 100px;
 }
+
+.banner-promo{
+	width: 420px;
+	height: 115px;
+	background-color: #001122;
+	position: absolute;
+	left: 0;
+	top: -131px;
+	border-radius: 5px;
+	background: linear-gradient(180.87deg, #23539C 0.75%, #0B1D4E 99.25%);
+	overflow: hidden;	
+}
+
+.banner-promo .text-container{
+	position: absolute;
+	background: transparent;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	text-align: center;
+}
+
+.banner-promo .text-container h5{
+	font-family: var(--font);
+	color: white;
+	font-weight: 800;
+	padding: 10px;
+}
+
+.banner-promo .circulo{
+    position: absolute;
+	border-radius: 50%;
+	background: linear-gradient(90deg, #E12179 0%, #311996 100%);
+}
+
+.circulo:first-child{
+	width: 45px;
+	height: 45px;
+	left: -8px;
+	top: -5px;
+}
+
+.circulo:nth-child(2){
+	width: 35px;
+	height: 35px;
+	bottom: -9px;
+	left: 90px;
+}
+
+.circulo:nth-child(3){
+	width: 30px;
+	height: 30px;
+	top: 18px;
+	right: 40px;
+}
+
 
 .titulo-form{
     z-index: 1000;
@@ -1635,13 +1693,14 @@ main{
 	}
 
 	.recta{
+		display: none;
 		opacity: 0;
 		position: relative;
 		left: 148px;
 		top: -138px;
 		height: 75px;
 		width: 230px;
-		display: flex;
+		/*display: flex;*/
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
@@ -1859,7 +1918,7 @@ main{
     height: 529px;
     position: relative;
     right: -34px;
-	top: 55px;
+	top: 139px;
     margin-top: 10px;
     z-index: 2;
     padding: 20px;
