--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,14 @@
-@import '../node_modules/bootstrap/scss/custom1.scss';
 
+@import '01.settings/all-settings.scss';
+@import '02.tools/all-tools.scss';
+/*
+@import '/sass/02.tools/*';
+@import '/sass/03.utilities/*';
+@import '/sass/04.elements/*';
+@import '/sass/05.components/*';
+@import '/sass/06.over/*';
+*/
+@import '../node_modules/bootstrap/scss/custom1.scss';
 
 
 
