--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 
 @import '01.settings/all-settings.scss';
 @import '02.tools/all-tools.scss';
+@import '05.components/all-components.scss';
+
 /*
 @import '/sass/02.tools/*';
 @import '/sass/03.utilities/*';
@@ -15,6 +17,6 @@
 
 
 body{
-    background-color: rgb(187, 107, 107);
+    
     
 }
