--- a/sass/01.settings/_variables.scss
+++ b/sass/01.settings/_variables.scss
@@ -23,7 +23,7 @@ $tamano-parrafo: 20px;
 
 //PADDING MOBILE
 $padding-360-mobile: 16px;
-$padding-R-L-desk: 16px;
+$padding-R-L-mobile: 0px 16px 0px 16px;
 
 //PADDING DESKTOP:
-$padding-R-L-desk: 90px;
+$padding-R-L-desk: 0px 90px 0px 90px;
