--- a/style-2.0.css
+++ b/style-2.0.css
@@ -57,6 +57,11 @@ header {
   border: none !important;
 }
 
+.container-nav {
+  padding: 0px 16px 0px 16px !important;
+  gap: 20px;
+}
+
 .nav-item a {
   font-family: "Mont";
   font-size: 16px;
@@ -71,6 +76,19 @@ header {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
+@media (min-width: 1000px) {
+  .navbar-expand-lg {
+    height: 100px;
+  }
+  .container-nav {
+    padding: 0px 90px 0px 90px !important;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar-expand-lg .navbar-collapse {
+    justify-content: flex-end;
+  }
+}
 /*
 @import '/sass/02.tools/*';
 @import '/sass/03.utilities/*';
