--- a/sass/01.settings/_variables.scss
+++ b/sass/01.settings/_variables.scss
@@ -1,9 +1,10 @@
 
 
-// Colores
+///////COLORES
 $color-white: #FFFFFF;
 $color-blue-light:#5c5776;
 $color-blue: #13005A;
+
 
 //Tamaños de fuentes MOBILE
 $tamano-titulo-header-mobile: 48px;
@@ -12,6 +13,7 @@ $span-header-mobille: 14px;
 
 $tamano-titulo-header-mobile: 32px;
 $tamano-parrafo-mobile: 20px;
+
 
 //Tamaños de fuentes DESK
 $tamano-titulo-header-desk: 60px;
@@ -26,4 +28,7 @@ $padding-360-mobile: 16px;
 $padding-R-L-mobile: 0px 16px 0px 16px;
 
 //PADDING DESKTOP:
-$padding-R-L-desk: 0px 90px 0px 90px;
+$padding-R-L-desk: 0px 30px 0px 30px;
+
+//PADDING DESKTOP plus plus:
+$padding-R-L-desk-plus-plus: 0px 90px 0px 90px;
