--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,8 @@
 
 @import '01.settings/all-settings.scss';
 @import '02.tools/all-tools.scss';
-@import '05.components/all-components.scss';
+@import '04.components/all-components.scss';
+@import '05.objects/objects.scss';
 
 /*
 @import '/sass/02.tools/*';
@@ -11,12 +12,8 @@
 @import '/sass/06.over/*';
 */
 @import '../node_modules/bootstrap/scss/custom1.scss';
+@import '../node_modules/bootstrap/scss/forms';
 
 
 
 
-
-body{
-    
-    
-}
