--- a/sass/05.objects/objects.scss
+++ b/sass/05.objects/objects.scss
@@ -10,7 +10,7 @@
 
 @media (min-width: $breakpoint-nav-large) {
     .o-text-h1{
-        @include h1header(60px, 1.3);
+        @include h1header(56px, 1.3);
         text-align: left;
         width: 500px;
     }
@@ -23,6 +23,7 @@
 @media (min-width: $breakpoint-nav-largex2){
     .o-text-h1{
         width: 615px;
+        padding-top: 50px;
     }
 }
 
