--- a/style-2.0.css
+++ b/style-2.0.css
@@ -51,7 +51,7 @@ font-face {
   background-image: url("img/backgreen.png");
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 0px 16px 0px 16px;
+  padding: 0px 16px 40px 16px;
 }
 .c-header__flex {
   flex-direction: column;
@@ -65,6 +65,8 @@ font-face {
     background-repeat: no-repeat;
     background-size: cover;
     padding: 0px 30px 0px 30px;
+    padding-bottom: 90px !important;
+    height: 660px;
   }
   .c-header__flex {
     flex-direction: row;
@@ -154,6 +156,88 @@ font-face {
     width: 450px;
   }
 }
+.c-main {
+  padding: 16px;
+}
+.c-main .c-main__beneficios {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+.c-main .c-main__beneficios h1 {
+  color: #8C989C;
+  text-align: center;
+  font-family: Mont;
+  font-size: 40;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0.8px;
+}
+.c-main .c-main__beneficios p {
+  color: #5C5776;
+  text-align: center;
+  font-family: Mont;
+  font-size: 20;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  max-width: 450px;
+}
+.c-main .c-main__beneficios .c-main__beneficios--cards {
+  display: grid;
+  grid-template-columns: 1fr; /* Por defecto, una columna */
+  gap: 20px; /* Espacio entre las cards */
+}
+.c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card img {
+  width: 50px;
+}
+.c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card span {
+  text-align: left;
+  color: #5C5776;
+  font-family: Mont;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22.4px; /* 160% */
+}
+.c-main .c-main__clinicas {
+  padding-top: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 16px;
+}
+.c-main .c-main__clinicas h1 {
+  color: #8C989C;
+  text-align: center;
+  font-family: Mont;
+  font-size: 40;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0.8px;
+}
+
+@media (min-width: 1000px) {
+  .c-main {
+    padding-top: 100px;
+  }
+  .c-main .c-main__beneficios .c-main__beneficios--cards {
+    grid-template-columns: 1fr 1fr; /* Dos columnas en desktop */
+  }
+  .c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card span {
+    font-size: 16px;
+    width: 500px;
+  }
+}
 .o-text-h1 {
   color: #FFF;
   text-align: center;
@@ -180,7 +264,7 @@ font-face {
     color: #FFF;
     text-align: center;
     font-family: Mont;
-    font-size: 60px;
+    font-size: 56px;
     font-style: normal;
     font-weight: 900;
     line-height: 1.3;
@@ -194,6 +278,7 @@ font-face {
 @media (min-width: 1200px) {
   .o-text-h1 {
     width: 615px;
+    padding-top: 50px;
   }
 }
 /*
