--- a/style-2.0.css
+++ b/style-2.0.css
@@ -9,6 +9,10 @@
   scroll-behavior: smooth;
 }
 
+body {
+  font-family: Mont !important;
+}
+
 /*Evitamos problemas con las imagenes*/
 img, picture, video, iframe, figure {
   max-width: 100%;
@@ -30,6 +34,10 @@ p a {
 
 li {
   list-style-type: none;
+}
+
+span {
+  font-weight: 600 !important;
 }
 
 font-face {
@@ -210,10 +218,11 @@ font-face {
   line-height: 22.4px; /* 160% */
 }
 .c-main .c-main__clinicas {
-  padding-top: 50px;
+  margin-top: 50px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding: 16px;
 }
 .c-main .c-main__clinicas h1 {
   color: #8C989C;
@@ -231,12 +240,15 @@ font-face {
   font-size: 20px;
   font-style: normal;
   font-weight: 900;
-  line-height: 16.4px; /* 102.5% */
+  line-height: 16.4px;
   letter-spacing: 0.106px;
   display: flex;
   flex-direction: row;
+  padding: 20px 0px 20px 0px;
+  border-bottom: 1px solid #e8e7ed;
+  background-color: white;
   justify-content: space-between;
-  gap: 40px;
+  width: 100%;
 }
 .c-main .c-main__clinicas .accordion-header button .icono {
   transition: transform 0.6s; /* Transición para la rotación */
@@ -247,7 +259,11 @@ font-face {
 
 @media (min-width: 1000px) {
   .c-main {
-    padding-top: 100px;
+    margin-top: 100px;
+    padding: 0px 30px 0px 30px;
+  }
+  .c-main .c-main__beneficios {
+    margin-top: 100px;
   }
   .c-main .c-main__beneficios .c-main__beneficios--cards {
     grid-template-columns: 1fr 1fr; /* Dos columnas en desktop */
@@ -255,6 +271,11 @@ font-face {
   .c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card span {
     font-size: 16px;
     width: 500px;
+  }
+  .c-main .c-main__clinicas {
+    padding-top: 100px;
+    max-width: 800px;
+    margin: 0 auto;
   }
 }
 .o-text-h1 {
