--- a/sass/05.objects/objects.scss
+++ b/sass/05.objects/objects.scss
@@ -7,7 +7,20 @@
 .o-text-h2{
     @include h1header(32px, 1.3);
 }
-
+#btn-id{
+    border-radius: 4px;
+    border: 1px solid #7B3092;
+    background: #13005A;
+    width: 100%;
+    height: 48px;
+    color: #FFF;
+    text-align: center;
+    font-family: Mont;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22.4px; /* 93.333% */
+}
 @media (min-width: $breakpoint-nav-large) {
     .o-text-h1{
         @include h1header(56px, 1.3);
