--- a/style-2.0.css
+++ b/style-2.0.css
@@ -381,6 +381,21 @@ p {
   line-height: 1.3;
 }
 
+#btn-id {
+  border-radius: 4px;
+  border: 1px solid #7B3092;
+  background: #13005A;
+  width: 100%;
+  height: 48px;
+  color: #FFF;
+  text-align: center;
+  font-family: Mont;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22.4px; /* 93.333% */
+}
+
 @media (min-width: 1000px) {
   .o-text-h1 {
     color: #FFF;
