--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./04.components/all-components.scss";
 @import "./05.objects/objects.scss";
 
+
 /*Elimina bordes*/
 * {
   margin: 0;
@@ -16,8 +17,18 @@
   scroll-behavior: smooth;
 }
 
+
+
+font-face {
+  font-family: "Montserrat", sans-serif;
+  src: url("/settings/Montserrat-Bold.ttf") format("truetype");
+  src: url("/settings/Montserrat-Bold.ttf") format("truetype");
+  src: url("/settings/Montserrat-SemiBold.ttf") format("truetype");
+  src: url("/settings/Montserrat-Thin.ttf") format("truetype");
+}
+
 body {
-  font-family: Mont !important;
+  font-family: 'Mont'!important;
 }
 
 /*Evitamos problemas con las imagenes*/
@@ -110,7 +121,7 @@ font-face {
 }
 
 .nav-item a {
-  font-family: "Mont";
+  font-family: "Montserrat";
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -202,7 +213,7 @@ font-face {
 .c-main .c-main__beneficios p {
   color: #5C5776;
   text-align: center;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 20;
   font-style: normal;
   font-weight: 700;
@@ -229,7 +240,7 @@ font-face {
 .c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card span {
   text-align: left;
   color: #5C5776;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -257,7 +268,7 @@ font-face {
 
 .c-main .c-main__clinicas .accordion-header button {
   color: #6B6B6B;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 20px;
   font-style: normal;
   font-weight: 900;
@@ -304,7 +315,7 @@ font-face {
 .o-text-h1 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  font-family: 'Montserrat';
   font-size: 48px;
   font-style: normal;
   font-weight: 900;
@@ -315,7 +326,7 @@ font-face {
 .o-text-h2 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 32px;
   font-style: normal;
   font-weight: 900;
@@ -326,7 +337,7 @@ font-face {
   .o-text-h1 {
     color: #FFF;
     text-align: center;
-    font-family: Mont;
+    font-family: "Montserrat";
     font-size: 56px;
     font-style: normal;
     font-weight: 900;
