--- a/style-2.0.css
+++ b/style-2.0.css
@@ -389,7 +389,7 @@ p {
   height: 48px;
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -428,8 +428,16 @@ p {
   scroll-behavior: smooth;
 }
 
+font-face {
+  font-family: "Montserrat", sans-serif;
+  src: url("/settings/Montserrat-Bold.ttf") format("truetype");
+  src: url("/settings/Montserrat-Bold.ttf") format("truetype");
+  src: url("/settings/Montserrat-SemiBold.ttf") format("truetype");
+  src: url("/settings/Montserrat-Thin.ttf") format("truetype");
+}
+
 body {
-  font-family: Mont !important;
+  font-family: "Mont" !important;
 }
 
 /*Evitamos problemas con las imagenes*/
@@ -522,7 +530,7 @@ font-face {
 }
 
 .nav-item a {
-  font-family: "Mont";
+  font-family: "Montserrat";
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -613,7 +621,7 @@ font-face {
 .c-main .c-main__beneficios p {
   color: #5C5776;
   text-align: center;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 20;
   font-style: normal;
   font-weight: 700;
@@ -640,7 +648,7 @@ font-face {
 .c-main .c-main__beneficios .c-main__beneficios--cards .c-main__beneficios--card span {
   text-align: left;
   color: #5C5776;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -668,7 +676,7 @@ font-face {
 
 .c-main .c-main__clinicas .accordion-header button {
   color: #6B6B6B;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 20px;
   font-style: normal;
   font-weight: 900;
@@ -715,7 +723,7 @@ font-face {
 .o-text-h1 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 48px;
   font-style: normal;
   font-weight: 900;
@@ -726,7 +734,7 @@ font-face {
 .o-text-h2 {
   color: #FFF;
   text-align: center;
-  font-family: Mont;
+  font-family: "Montserrat";
   font-size: 32px;
   font-style: normal;
   font-weight: 900;
@@ -737,7 +745,7 @@ font-face {
   .o-text-h1 {
     color: #FFF;
     text-align: center;
-    font-family: Mont;
+    font-family: "Montserrat";
     font-size: 56px;
     font-style: normal;
     font-weight: 900;
